# android-knysq-test

./: Cargo.toml  README.md  build.cargo.ndk.sh  build.sh  gradle.properties
agdk-cpal/: Cargo.toml  README.md  build.gradle  build.sh
agdk-cpal/app/: build.gradle
agdk-cpal/src/: lib.rs
agdk-oboe/: Cargo.toml  README.md
agdk-oboe/src/: lib.rs
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
src/: lib.rs
