[package]
name = "agdk-cpal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
android_logger = "0.11.0"
android-activity = { version = "0.6.0", features = ["game-activity"] }
cpal = "0.15"
atomic_float = "1.1.0"
anyhow = "1"

[lib]
name="main"
crate-type=["cdylib"]