[package]
name = "agdk-cpal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
android_logger = "0.14.1"
android-activity = { version = "0.6.0", features = ["game-activity"] }
knyst = { path = "../../knyst/knyst", features = ["cpal"], default-features = false }
atomic_float = "1.1.0"
anyhow = "1"
cpal = "0.15"

[lib]
name="main"
crate-type=["cdylib"]