[package]
name = "agdk-oboe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
android_logger = "0.14.1"
android-activity = { version = "0.6.0", features = ["game-activity"] }
oboe = { version = "0.6.1", features = ["java-interface"] }
atomic_float = "1.1.0"

[lib]
name="main"
crate_type=["cdylib"]